# Hazel

./: .gitignore  .gitmodules  CMakeLists.txt  Hazel.mdj  Hazel.sln  README.md
Hazel/: Hazel.vcxproj  Hazel.vcxproj.filters
Hazel/include/: Hazel.h
Hazel/src/: Application.cpp  Application.h  EntryPoint.h  Hazel.h  Test.cpp  Test.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
bin-int/Debug-x64/Hazel/: vc142.idb
bin-int/Debug-x64/Hazel/Hazel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hazel.lastbuildstate  Hazel.write.1u.tlog  link.12868.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: vc142.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
hazel/: CMakeLists.txt
hazel/include/: Application.h  EntryPoint.h  Log.h
hazel/src/: Hazel.h
hazel/src/core/: Log.cpp  core.h
playground/: CMakeLists.txt
playground/src/: playground.cpp
